<resources>
    <string name="app_name">Weather Or Not</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="today">Today</string>
    <string name="hourly">Hourly</string>
    <string name="weekly">Weekly</string>
    <string name="activities">Activities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUES</string>
    <string name="thursday">THURS</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="wednesday">WED</string>
    <string name="low_high"><![CDATA[Low -> High]]></string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="percent">%</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="weather_condition_image">Weather condition image</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="degreesF"> °F</string>
    <string name="last_updated">Last Updated:</string>
    <string name="choose_an_activity">Choose an Activity</string>
    <string name="no_suggested_activity">No suggested activities for this day.</string>
    <string name="no_selected_activity">No suggested days for this activity.</string>
    <string name="no_suggested_days">No suggested days for this activity.</string>
    <string name="choose_day_of_the_week">Choose Day of The Week</string>
    <string name="your_suggested_activities_are">Your Suggested Activities Are:</string>
    <string name="your_suggested_days_are">Your Suggested Days Are:</string>

</resources>