<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="56dp"
        >
        <!--Top Weather Row -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--Day of the week name -->
            <TextView
                android:id="@+id/day1_name"
                style="@style/dayOfTheWeek"

                />
            <!--API INFORMATION NEEDED-->
            <ImageView
                android:id="@+id/day1_weather_img"
                style="@style/icon"

                />
            <TextView
                android:id="@+id/day1_precip"
                style="@style/percent"
                android:text="@string/percent"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/day1_mintemp"
                style="@style/lowHighTemps"
                android:text="@string/low"
                />

            <TextView
                style="@style/lowHighTemps"
                android:text=""
                app:drawableBottomCompat="@drawable/ic_arrowright_foreground" />

            <TextView
                android:id = "@+id/day1_maxtemp"
                style="@style/lowHighTemps"
                android:text="@string/high"
                />

        </LinearLayout>

        <!-- Weather Row 2-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <!--Day of the week name -->
            <TextView
                android:id="@+id/day2_name"
                style="@style/dayOfTheWeek"
                />
            <!--API INFORMATION NEEDED-->
            <ImageView
                android:id="@+id/day2_weather_img"
                style="@style/icon"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day2_precip"
                style="@style/percent"
                android:text="@string/percent"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/day2_mintemp"
                style="@style/lowHighTemps"
                android:text="@string/low"
                />

            <TextView
                style="@style/lowHighTemps"
                android:text=""
                app:drawableBottomCompat="@drawable/ic_arrowright_foreground" />

            <TextView
                android:id="@+id/day2_maxtemp"
                style="@style/lowHighTemps"
                android:text="@string/high"
                />

        </LinearLayout>

        <!-- Weather Row 3-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Day of the week name -->

            <TextView
                android:id="@+id/day3_name"
                style="@style/dayOfTheWeek"
                />
            <!-- API INFORMATION NEEDED-->
            <ImageView
                android:id="@+id/day3_weather_img"
                style="@style/icon"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day3_precip"
                style="@style/percent"
                android:text="@string/percent"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/day3_mintemp"
                style="@style/lowHighTemps"
                android:text="@string/low"
                />

            <TextView
                style="@style/lowHighTemps"
                android:text=""
                app:drawableBottomCompat="@drawable/ic_arrowright_foreground" />

            <TextView
                android:id="@+id/day3_maxtemp"
                style="@style/lowHighTemps"
                android:text="@string/high"
                />

        </LinearLayout>

        <!-- Weather Row 4-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Day of the week name -->

            <TextView
                android:id="@+id/day4_name"
                style="@style/dayOfTheWeek"
                />
            <!--API INFORMATION NEEDED-->
            <ImageView
                android:id="@+id/day4_weather_img"
                style="@style/icon"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day4_precip"
                style="@style/percent"
                android:text="@string/percent"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/day4_mintemp"
                style="@style/lowHighTemps"
                android:text="@string/low"
                />

            <TextView
                style="@style/lowHighTemps"
                android:text=""
                app:drawableBottomCompat="@drawable/ic_arrowright_foreground" />

            <TextView
                android:id="@+id/day4_maxtemp"
                style="@style/lowHighTemps"
                android:text="@string/high"
                />

        </LinearLayout>


        <!-- Weather Row 5-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Day of the week name -->
            <TextView
                android:id="@+id/day5_name"
                style="@style/dayOfTheWeek"
                />
            <!--API INFORMATION NEEDED-->
            <ImageView
                android:id="@+id/day5_weather_img"
                style="@style/icon"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day5_precip"
                style="@style/percent"
                android:text="@string/percent"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/day5_mintemp"
                style="@style/lowHighTemps"
                android:text="@string/low"
                />

            <TextView
                style="@style/lowHighTemps"
                android:text=""
                app:drawableBottomCompat="@drawable/ic_arrowright_foreground" />

            <TextView
                android:id="@+id/day5_maxtemp"
                style="@style/lowHighTemps"
                android:text="@string/high"
                />

        </LinearLayout>

        <!-- Weather Row 6 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Day of the week name -->
            <TextView
                android:id="@+id/day6_name"
                style="@style/dayOfTheWeek"
                />
            <!--API INFORMATION NEEDED-->
            <ImageView
                android:id="@+id/day6_weather_img"
                style="@style/icon"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day6_precip"
                style="@style/percent"
                android:text="@string/percent"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day6_mintemp"
                style="@style/lowHighTemps"
                android:text="@string/low"
                />

            <TextView
                style="@style/lowHighTemps"
                android:text=""
                app:drawableBottomCompat="@drawable/ic_arrowright_foreground" />

            <TextView
                android:id="@+id/day6_maxtemp"
                style="@style/lowHighTemps"
                android:text="@string/high"
                />

        </LinearLayout>

        <!-- Weather Row 7 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Day of the week name -->
            <TextView
                android:id="@+id/day7_name"
                style="@style/dayOfTheWeek"
                />
            <!--API INFORMATION NEEDED-->
            <ImageView
                android:id="@+id/day7_weather_img"
                style="@style/icon"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day7_precip"
                style="@style/percent"
                android:text="@string/percent"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/day7_mintemp"
                style="@style/lowHighTemps"
                android:text="@string/low"
                />

            <TextView
                style="@style/lowHighTemps"
                android:text=""
                app:drawableBottomCompat="@drawable/ic_arrowright_foreground" />

            <TextView
                android:id="@+id/day7_maxtemp"
                style="@style/lowHighTemps"
                android:text="@string/high"
                />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/weekly_nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>